<resources>
    <string name="app_name">Caller_ID</string>
    <string name="this_is_item_sample">This is item sample!</string>
    <string name="your_feedback_is_welcome">Your feedback is welcome.</string>
    <string name="rate_us">Rate us</string>
    <string name="may_be_later">May be later</string>
    <string name="oh_we_re_sorry">Oh, We’re sorry...</string>
    <string name="please_send_us">Please send us some feedback!</string>
    <string name="There_is_no_email">There is no email client installed.</string>
    <string name="much_appreciated">Much appreciated!</string>
    <string name="your_support_is_our_biggest_motivation">Your support is our biggest motivation!</string>
    <string name="write_some_feedback">Write some feedback</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="Language">Language</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="permission">Permission</string>
    <string name="Allow_access_to_send_and_read_SMS">Allow sending and reading SMS</string>
    <string name="allow_app_to_be_default_SMS">Allow app to be default SMS</string>
    <string name="allow_reading_of_call_logs">Allow reading of call logs</string>
    <string name="this_app_needs_permissions_below_to_work_properly">This app needs permissions below to work properly</string>
    <string name="continue2">Continue</string>
    <string name="this_action_may_contain_advertising">This action can contain ads</string>
    <string name="desc_warning_permission_dialog">Desc warning permission dialog</string>
    <string name="header_warning_permission">Header warning permission</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="type_a_message">Type a message</string>
    <string name="yesterday">yesterday</string>
    <string name="today">Today</string>
    <string name="recents">Recents</string>
    <string name="favorites">Favorites</string>
    <string name="caller_id_disabled">Caller ID Disabled</string>
    <string name="to_enjoy_enhanced_calling_experience_with_advanced_features">To enjoy enhanced calling experience with advanced features Set Caller ID as your default phone app.</string>
    <string name="set_as_default">Set As Default</string>
    <string name="setting">Setting</string>
    <string name="spam">Spam</string>
    <string name="blocked">Blocked</string>
    <string name="block_top_spammer">Block top Spammer</string>
    <string name="reported_by_users_as_spam">Reported by users as spam</string>
    <string name="private_amp_hidden_numbers"><![CDATA[Private & Hidden numbers]]></string>
    <string name="number_that_is_shown_as_unknown_or_private">Number that is shown as Unknown or Private</string>
    <string name="numbers_not_in_contacts">Numbers not in contacts</string>
    <string name="phone_number">Phone Number</string>
    <string name="country_code">Country Code</string>
    <string name="numbers_series">Numbers Series</string>
    <string name="message_sender_name">Message sender name</string>
    <string name="block_international_calls">Block international calls</string>
    <string name="only_receive_calls_from_your_country">Only receive Calls from your Country</string>
    <string name="add_to_spam">Add to spam</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="all_messages">All messages</string>
    <string name="messages">Messages</string>
    <string name="no_search_results">No search results</string>
    <string name="your_unread_message_appear_here">your unread message appear here</string>
    <string name="do_not_disturb">Do not Disturb</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="block_a_number">Block a Number</string>
    <string name="block_a_sender_name">Block a sender name</string>
    <string name="block_a_country_code">Block a country code</string>
    <string name="block_a_number_series">Block a Number Series</string>
    <string name="number">Number</string>
    <string name="enter_a_number_or_a_pattern">Enter a number or a pattern (e.g. *12345*, +1*8888) to block all calls and messages from numbers matching the pattern.</string>
    <string name="select_a_country_code_you_want_to_block">Select a country Code you want to block</string>
    <string name="remove_from_spam">Remove from spam</string>

    <string name="any_sender_which_the_name_you_enter">Any sender which contain\'s the name you enter will be blocked</string>
    <string name="blocked_user">Blocked User</string>
    <string name="number_start_with">Number start with</string>
    <string name="number_end_with">Number end with</string>
    <string name="sender">Sender</string>
    <string name="are_you_sure_you_want_to_unblock">Are You Sure You Want to Unblock?</string>
    <string name="unblocked">Unblocked</string>
    <string name="new_conversation">New conversation</string>
    <string name="receiver">Receiver</string>
    <string name="search_contact">Search Contact</string>
    <string name="contact">Contact</string>
    <string name="call">Call</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="mobile">Mobile</string>
    <string name="report_spam">Report spam</string>
    <string name="location">Location</string>
    <string name="suggest_a_name">Suggest a name</string>
    <string name="your_call_status_with_hh">Your Call Status with Hh</string>
    <string name="incoming">Incoming</string>
    <string name="outgoing">Outgoing</string>
    <string name="missed_calls">Missed Calls</string>
    <string name="unanswered">Unanswered</string>
    <string name="recently">Recently</string>
    <string name="don_t_disturb_me">Don\'t disturb me</string>
    <string name="snooze_all_incoming_calls">Snooze all incoming calls</string>
    <string name="from_contacts">From Contacts</string>
    <string name="from_call_history">From Call History</string>
    <string name="add_number_manually">Add Number Manually</string>
    <string name="snoozed_user">Snoozed User</string>
    <string name="don_t_disturb">Don\'t Disturb</string>
    <string name="silence_unwanted_calls_by_adding_a_number">Silence unwanted calls by adding a number or pattern. Customize snoozing with different options.</string>
    <string name="permanently">Permanently</string>
    <string name="counter">Counter</string>
    <string name="timer">Timer</string>
    <string name="please_select_time_duration">Please select Time Duration</string>
    <string name="don_t_disturb_by_counter">Don\'t Disturb By Counter</string>
    <string name="done">Done</string>
    <string name="please_select_number_of_count">Please select Number of Count</string>
    <string name="don_t_disturb_by_time">Don\'t Disturb By Time</string>
    <string name="n30_min">30\nmin</string>
    <string name="n1_hour">1\nhour</string>
    <string name="n2_hours">2\nhours</string>
    <string name="n8_hours">8\nhours</string>
    <string name="please_select_statel">Please select statel</string>
    <string name="are_you_sure_you_want_to_unblock_spam">Are You Sure You Want to unblock Spam?</string>
    <string name="unblocked_spam">Unblocked spam</string>
    <string name="all">All</string>
    <string name="incoming_calls">Incoming Calls</string>
    <string name="outgoing_calls">Outgoing Calls</string>
    <string name="blocked_calls">Blocked Calls</string>
    <string name="clear_all_calls">Clear all Calls</string>
    <string name="no_data">No data</string>
    <string name="policy">Policy</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="support">Support</string>
    <string name="call_settings">Call settings</string>
    <string name="caller_info">
  <font color="#505050" size="15" >Caller ID\n</font><br />
  <font color="#7C7E81" size="12">Show information during phone calls</font>
</string>
    <string name="call_dialer">Call dialer</string>
    <string name="please_enter_number">Please enter number</string>
    <string name="blocked_number">Blocked %1$s</string>
    <string name="number_deleted">Blocked number deleted %1$s</string>
    <string name="first_name">First name</string>
    <string name="save">Save</string>


    <string name="call_via_sim_from">Call via SIM from</string>
    <string name="calling">Calling.....</string>
    <string name="connecting">Connecting...</string>
    <string name="is_calling">Is Calling...</string>
    <string name="incoming_call">Incoming call...</string>
    <string name="finished_call">Finished call...</string>
    <string name="unknown">Unknown</string>
</resources>