<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_conner_radiustop_white"
    android:padding="15dp">

<!--    manually-->
    <LinearLayout
        android:id="@+id/ll_manually"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/don_t_disturb"
                android:fontFamily="@font/opensans_bold_700"
                android:textColor="@color/color_505050"
                android:textSize="16sp" />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_clip_clear_block"
                android:padding="5dp"
                />
        </LinearLayout>
        <TextView
            android:layout_marginTop="-7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_select_statel"
            android:fontFamily="@font/opensans_regula_400"
            android:textSize="13sp"
            android:textColor="@color/color_7C7E81"
            />
        <EditText
            android:id="@+id/edt_content"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_conner_edit"
            android:hint="@string/phone_number"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:fontFamily="@font/opensans_bold_700"
            android:textSize="16sp"
            android:textColor="@color/color_505050"
            android:inputType="numberSigned"
            />
        <TextView
            android:id="@+id/txt_content"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/silence_unwanted_calls_by_adding_a_number"
            android:fontFamily="@font/opensans_regula_400"
            android:textSize="13sp"
            android:textColor="@color/color_7C7E81"
            />

        <TextView
            android:id="@+id/iv_permanently"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_conner_blue"
            android:backgroundTint="#E4EBFF"
            android:fontFamily="@font/opensans_semibold_600"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/permanently"
            android:textColor="@color/color_3368EE"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/iv_counter"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/counter"
            android:fontFamily="@font/opensans_semibold_600"
            android:textSize="14sp"
            android:textColor="@color/color_3368EE"
            android:gravity="center"
            android:background="@drawable/bg_conner_blue"
            android:backgroundTint="#E4EBFF"
            android:paddingVertical="10dp"
            />
        <TextView
            android:id="@+id/iv_time"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:fontFamily="@font/opensans_semibold_600"
            android:textSize="14sp"
            android:textColor="@color/color_3368EE"
            android:gravity="center"
            android:background="@drawable/bg_conner_blue"
            android:backgroundTint="#E4EBFF"
            android:paddingVertical="10dp"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:fontFamily="@font/opensans_semibold_600"
            android:textSize="14sp"
            android:textColor="@color/color_505050"
            android:gravity="center"
            android:background="@drawable/bg_conner_blue"
            android:backgroundTint="#F6F6F6"
            android:paddingVertical="10dp"
            android:layout_marginBottom="40dp"
            />
    </LinearLayout>

<!--    counter-->
    <LinearLayout
        android:id="@+id/ll_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/don_t_disturb_by_counter"
                android:fontFamily="@font/opensans_bold_700"
                android:textColor="@color/color_505050"
                android:textSize="16sp" />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_rsset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_refresh_arrow_01"
                android:padding="5dp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_select_number_of_count"
            android:fontFamily="@font/opensans_regula_400"
            android:textSize="13sp"
            android:textColor="@color/color_7C7E81"
            />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:layout_marginVertical="20dp"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_minus_round"
                    android:layout_marginEnd="30dp"
                    />
                <TextView
                    android:id="@+id/txt_counter"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_conner_edit"
                    android:fontFamily="@font/opensans_bold_700"
                    android:textColor="@color/color_505050"
                    tools:text="0"
                    android:gravity="center"
                    android:textSize="16sp"
                    />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_plus_round"
                    android:layout_marginStart="30dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:fontFamily="@font/opensans_semibold_600"
                    android:textSize="14sp"
                    android:textColor="@color/color_3368EE"
                    android:background="@drawable/bg_conner_e4ebff"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:layout_marginEnd="7dp"
                    />
                <TextView
                    android:id="@+id/txt_6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="6"
                    android:fontFamily="@font/opensans_semibold_600"
                    android:textSize="14sp"
                    android:textColor="@color/color_3368EE"
                    android:background="@drawable/bg_conner_e4ebff"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:layout_marginHorizontal="7dp"
                    />
                <TextView
                    android:id="@+id/txt_9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="9"
                    android:fontFamily="@font/opensans_semibold_600"
                    android:textSize="14sp"
                    android:textColor="@color/color_3368EE"
                    android:background="@drawable/bg_conner_e4ebff"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:layout_marginHorizontal="7dp"
                    />
                <TextView
                    android:id="@+id/txt_12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="12"
                    android:fontFamily="@font/opensans_semibold_600"
                    android:textSize="14sp"
                    android:textColor="@color/color_3368EE"
                    android:background="@drawable/bg_conner_e4ebff"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    />
            </LinearLayout>
        <TextView
            android:id="@+id/iv_done_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:fontFamily="@font/opensans_semibold_600"
            android:textSize="14sp"
            android:textColor="@color/color_505050"
            android:gravity="center"
            android:background="@drawable/bg_conner_blue"
            android:backgroundTint="#F6F6F6"
            android:paddingVertical="10dp"
            android:layout_marginVertical="30dp"
            />
    </LinearLayout>

<!--    timer-->

    <LinearLayout
        android:id="@+id/ll_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/don_t_disturb_by_time"
                android:fontFamily="@font/opensans_bold_700"
                android:textColor="@color/color_505050"
                android:textSize="16sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_select_time_duration"
            android:fontFamily="@font/opensans_regula_400"
            android:textSize="13sp"
            android:textColor="@color/color_7C7E81"
            />
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_30min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/n30_min"
                android:lineHeight="15dp"
                android:fontFamily="@font/opensans_semibold_600"
                android:textSize="14sp"
                android:textColor="@color/color_3368EE"
                android:background="@drawable/bg_conner_e4ebff"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:layout_marginEnd="7dp"
                />
            <TextView
                android:id="@+id/txt_1hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/n1_hour"
                android:lineHeight="15dp"
                android:fontFamily="@font/opensans_semibold_600"
                android:textSize="14sp"
                android:textColor="@color/color_3368EE"
                android:background="@drawable/bg_conner_e4ebff"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="7dp"
                />
            <TextView
                android:id="@+id/txt_2hours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/n2_hours"
                android:lineHeight="15dp"
                android:fontFamily="@font/opensans_semibold_600"
                android:textSize="14sp"
                android:textColor="@color/color_3368EE"
                android:background="@drawable/bg_conner_e4ebff"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="7dp"
                />
            <TextView
                android:id="@+id/txt_8hours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/n8_hours"
                android:lineHeight="15dp"
                android:fontFamily="@font/opensans_semibold_600"
                android:textSize="14sp"
                android:textColor="@color/color_3368EE"
                android:background="@drawable/bg_conner_e4ebff"
                android:gravity="center"
                android:paddingVertical="10dp"
                />
        </LinearLayout>
        <include
            android:id="@+id/include"
            layout="@layout/demo_test_number"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_gravity="center"
            />


        <TextView
            android:id="@+id/iv_done_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:fontFamily="@font/opensans_semibold_600"
            android:textSize="14sp"
            android:textColor="@color/color_505050"
            android:gravity="center"
            android:background="@drawable/bg_conner_blue"
            android:backgroundTint="#F6F6F6"
            android:paddingVertical="10dp"
            android:layout_marginBottom="30dp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>