<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="17sp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/bg_rating"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/block_a_number"
                android:fontFamily="@font/opensans_bold_700"
                android:textSize="18sp"
                android:textColor="@color/color_505050"
                android:layout_weight="1"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_Clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_clip_clear_block"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/txt_spin"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_semibold_600"
            android:textSize="13sp"
            android:textColor="@color/color_505050"
            android:text="@string/select_a_country_code_you_want_to_block"
            android:gravity="center"
            android:visibility="gone"
            />
        <Spinner
            android:layout_marginTop="20dp"
            android:id="@+id/spinnerCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_conner_edit"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/edt_content"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_conner_edit"
            android:hint="@string/number"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:fontFamily="@font/opensans_bold_700"
            android:textSize="16sp"
            android:textColor="@color/color_505050"
            android:inputType="numberSigned"
            />
        <TextView
            android:id="@+id/txt_content"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_a_number_or_a_pattern"
            android:fontFamily="@font/opensans_regula_400"
            android:textSize="13sp"
            android:textColor="@color/color_7C7E81"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/iv_Block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15sp"
            android:gravity="center"
            android:paddingVertical="13sp"
            android:text="@string/block"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:background="@drawable/bg_conner_blue"
            android:backgroundTint="@color/color_3368EE"
            android:fontFamily="@font/opensans_bold_700"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>